--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -884,7 +884,7 @@ textarea.feedinput {
         float: none;
         width:100%;
         height:200px;
-        margin-right:8px;
+        margin-left: -2px;
     }
     #city_map {
         width:98%;
@@ -986,7 +986,7 @@ textarea.feedinput {
         float: none;
         width:100%;
         height:180px;
-        margin-right:8px;
+        margin-left:7px;
     }
     #city_map {
         width:98%;
