Мелкие баги по верстке второй подход, see #15

--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -1082,6 +1082,10 @@ textarea.feedinput {
         -moz-border-radius: 0px;
         border-radius: 0px;
     }
+    #mainmenu li {
+        position: relative;
+        top: -8px;
+    }
     #mainmenu form {
         display:none;
     }
