--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -931,6 +931,13 @@ textarea.feedinput {
     .textmarker {
         margin-right: 0;
     }
+    .list-half-left {
+        width: 100%;
+    }
+    .list-half-right {
+        width: 100%;
+        float: none;
+    }
     #footer {
         min-width: 0;
     }
@@ -1313,7 +1320,19 @@ textarea.feedinput {
     .objlink {
         font-size: 90%;
     }
-    .point_gpsshort {display:none;}
+    .point_gpsshort {
+        display:none;
+    }
+    .list-half-left {
+        width: 100%;
+    }
+    .list-half-right {
+        width: 100%;
+        float: none;
+    }
+    .list-map {
+        height:100px;
+    }
     #yandex_ad {
         display:none;
     }
