--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -939,6 +939,9 @@ textarea.feedinput {
         width: 100%;
         float: none;
     }
+    .list-map {
+        height:150px;
+    }
     .list-half-right li {
         margin-top: 2px;
     }
@@ -1128,7 +1131,7 @@ textarea.feedinput {
     #content h1 {
         width: 100%;
         padding-left: 2px;
-        height: 20px;
+        height: 15px;
         font-size:11pt;
     }
     #content h2 {
