--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -15,7 +15,7 @@
                 <link rel="search" href="/search/" />
                 <link rel="copyright" href="/about/" />
                 <link rel="start" href="http://{$page->basepath}/" />
-                <meta name="viewport" content="width=device-width;initial-scale=1.0" />
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin,cyrillic-ext,cyrillic" type="text/css"/>
                     <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
                     <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
