--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -55,14 +55,14 @@
 <input type="hidden" id="pan_sw_lon" value="{$object.sw_ne.sw.lon}" />
 <input type="hidden" id="pan_ne_lat" value="{$object.sw_ne.ne.lat}" />
 <input type="hidden" id="pan_ne_lon" value="{$object.sw_ne.ne.lon}" />
-<script type="text/javascript" src="/js/map_page_point.js"></script>
-<script type="text/javascript" src="/js/panoramio_page_point.js"></script>
+<script type="text/javascript" src="/js/map_page_point.js" defer="true"></script>
+<script type="text/javascript" src="/js/panoramio_page_point.js" defer="true"></script>
 {/if}
 <div style="height:25px;overflow:hidden;margin: 10px;">
-    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8" defer="true"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
 </div>
 
 
 <div id="yandex_ad"></div>
-<script type="text/javascript" src="/js/adv_point.js"></script>
+<script type="text/javascript" src="/js/adv_point.js" defer="true"></script>
