--- a/templates/_pages/pagecity.edit.sm.html
+++ b/templates/_pages/pagecity.edit.sm.html
@@ -171,10 +171,5 @@
 <input type="hidden" id="mapcity_pc_latitude" value="{$city.pc_latitude}" />
 <input type="hidden" id="mapcity_pc_longitude" value="{$city.pc_longitude}" />
 <input type="hidden" id="mapcity_pc_zoom" value="{$city.pc_zoom}" />
-<script type="text/javascript" src="/js/map_page_city.js"></script>
+<script type="text/javascript" src="/js/map_page_city.js" defer="true"></script>
 {/if}
-
-<div id="yandex_sharer">
-    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
-    <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
-</div>
