--- a/templates/map/map.sm.html
+++ b/templates/map/map.sm.html
@@ -7,7 +7,7 @@
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
 </div>
 
-<script type="text/javascript" src="/js/map.js"></script>
+<script type="text/javascript" src="/js/map.js" defer="true"></script>
 <style>
     #maponpage {
         width:99%;
