В списках поправил колонки

--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -269,11 +269,12 @@ ol {
 .list-half-left {
     width:49%;
     text-align: justify;
+    float: left;
 }
 .list-half-right {
     display:block;
     width:45%;
-    float: right;
+    margin-left: 50%;
 }
 .list-map {
     width:100%;
