грузим апи панорамио в шаблоне

--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -56,6 +56,7 @@
 <input type="hidden" id="pan_ne_lat" value="{$object.sw_ne.ne.lat}" />
 <input type="hidden" id="pan_ne_lon" value="{$object.sw_ne.ne.lon}" />
 <script type="text/javascript" src="/js/map_page_point.js" defer="true"></script>
+<script type="text/javascript" src="http://www.panoramio.com/wapi/wapi.js?v=1&amp;hl=ru" defer="true"></script>
 <script type="text/javascript" src="/js/panoramio_page_point.js" defer="true"></script>
 {/if}
 <div style="height:25px;overflow:hidden;margin: 10px;">
