common.v2.9.css на будущее чуть красивее будет

--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -807,9 +807,7 @@ textarea.feedinput {
     right:-14px;
     width:22px;
     height:26px;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
-        src='/img/x.png', sizingMethod='scale'
-        );
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/x.png', sizingMethod='scale');
 }
 .simplewindow {
     overflow-x: hidden;
