Переходим на пакеты в модуле большой карты, see #21

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -21,18 +21,18 @@
                 <!--[if lt IE 9]>
                     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
                 <![endif]-->
-                <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js" defer="true"></script>
-                <script type="text/javascript" src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" defer="true"></script>
+                <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js" defer="defer"></script>
+                <script type="text/javascript" src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" defer="defer"></script>
                 {if $page->user.userid}
-                <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="true"></script>
-                <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="true"></script>
-                <script type="text/javascript" src="/js/jquery.ui.core.js" defer="true"></script>
-                <script type="text/javascript" src="/js/jquery.ui.datepicker.js" defer="true"></script>
-                <script type="text/javascript" src="/js/jquery.ui.datepicker-ru.js" defer="true"></script>
+                <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
+                <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
+                <script type="text/javascript" src="/js/jquery.ui.core.js" defer="defer"></script>
+                <script type="text/javascript" src="/js/jquery.ui.datepicker.js" defer="defer"></script>
+                <script type="text/javascript" src="/js/jquery.ui.datepicker-ru.js" defer="defer"></script>
                 <link rel="stylesheet" href="http://{$page->basepath}/css/ui-lightness/jquery-ui-1.8.2.custom.css" type="text/css" />
                 {/if}
                 <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
-                <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="true"></script>
+                <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
                 </head>
                 <body>
                     <div id="wrapper">
