--- a/templates/map/map.sm.html
+++ b/templates/map/map.sm.html
@@ -3,11 +3,10 @@
 <div id="mapstat">Отображается точек: <span id="mapdata_points">0</span></div>
 
 <div style="height:25px;overflow:hidden;margin: 10px;">
-    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+    <script type="text/javascript" src="//yandex.st/share/share.js" defer="defer" charset="utf-8"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
 </div>
 
-<script type="text/javascript" src="/js/map.js" defer="true"></script>
 <style>
     #maponpage {
         width:99%;
