Переходим на пакеты в овсех модулях, fix #21

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -166,12 +166,10 @@
 <input type="hidden" id="mapcity_pc_latitude" value="{$city.pc_latitude}" />
 <input type="hidden" id="mapcity_pc_longitude" value="{$city.pc_longitude}" />
 <input type="hidden" id="mapcity_pc_zoom" value="{$city.pc_zoom}" />
-<script type="text/javascript" src="/js/map_page_city.js" defer="true"></script>
 {/if}
 
 <div id="yandex_sharer">
-    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8" defer="true"></script>
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8" defer="defer"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
 </div>
 <div id="yandex_ad"></div>
-<script type="text/javascript" src="/js/adv_city.js" defer="true"></script>
