--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -23,6 +23,7 @@
                 <![endif]-->
                 <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js" defer="defer"></script>
                 <script type="text/javascript" src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" defer="defer"></script>
+                <script type="text/javascript" src="http://www.panoramio.com/wapi/wapi.js?v=1&amp;hl=ru" defer="defer"></script>
                 {if $page->user.userid}
                 <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
                 <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
