Убрал маркеры списка

--- a/templates/city/city.show.sm.html
+++ b/templates/city/city.show.sm.html
@@ -1,5 +1,5 @@
 <h2>Города и регионы</h2>
-<ul>
+<ul style="list-style-type: none;font-size:100%;">
         {foreach from=$tcity item=city}
         <li>
                 <a href="{$city.url}/"
